# sb_vk_basic

./: CMakeLists.txt
data/: basic.frag  basic.vert  default.frag  default.vert  flash_light.mtl  frag.spv  vert.spv
script/: build_data.py
src/: main.cpp  main_old.cpp  utility.cpp  utility.h  utility_vulkan.cpp  utility_vulkan.h
util/: build_data.py  build_shader.sh
